# pgrepl-test

./: Cargo.toml  README.md  db.dockerfile  docker-compose.yaml
.cargo/: config.toml
src/: main.rs  serializer.rs
