[package]
name = "pgrepl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
# tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres" }
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", features = [
    "serde",
] }
postgres-protocol = { git = "https://github.com/MaterializeInc/rust-postgres" }
mz-postgres-util = { git = "https://github.com/MaterializeInc/materialize" }
mz-repr = { git = "https://github.com/MaterializeInc/materialize" }
mz-expr = { git = "https://github.com/MaterializeInc/materialize" }
mz-pgcopy = { git = "https://github.com/MaterializeInc/materialize" }
anyhow = "*"
uuid = "*"
async-stream = "*"
futures = "*"
once_cell = "*"
simd-json = "0.7.0"
bytes = "1.4.0"
serde = "*"
serde_json = "*"
